# nordic-baremetal

./: .gitignore  .gitmodules
cmake/: README.md  arm-none-eabi.cmake
hello_world/: CMakeLists.txt  cmake_install.cmake  main.c
hello_world/build-test/: .ninja_deps  .ninja_log  CMakeCache.txt  _tests  build.ninja  cmake_install.cmake
hello_world/drivers/: CMakeLists.txt  uart.c  uart.h
hello_world/nrf_config/: README.md  nrfx_config_nrf52833.h  nrfx_glue.h
hello_world/sys/: CMakeLists.txt  irq.h  mutex.c  mutex.h  pend_sv.S  scheduler.c  scheduler.h  spin_lock.c  spin_lock.h  syscalls.c  thread.c  thread.h
hello_world/tests/: CMakeLists.txt  slist_test.cpp
hello_world/tools/: CMakeLists.txt  misc.h  slist.c  slist.h  to_string.h
lib/: README.md
